--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,24 +33,24 @@
     />
     <meta
       property="og:image"
-      content="https://invitation-click.vercel.app/favicon.png"
+      content="https://inviteme-click.vercel.app/favicon.png"
     />
     <meta
       property="og:url"
-      content="https://invitation-click.vercel.app/"
+      content="https://inviteme-click.vercel.app/"
     />
     <meta property="og:site_name" content="Invitation Click" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Invitation Click | Digital Invitations Made Easy" />
+    <meta name="twitter:title" content="Inviteme Click | Digital Invitations Made Easy" />
     <meta
       name="twitter:description"
       content="Elegant digital invitations for weddings and special events."
     />
     <meta
       name="twitter:image"
-      content="https://invitation-click.vercel.app/favicon.png"
+      content="https://inviteme-click.vercel.app/favicon.png"
     />
 
     <!-- Theme color (mobile browser bar) -->
